[gd_scene load_steps=5 format=3 uid="uid://b4m3nc1gvykei"]

[ext_resource type="Script" path="res://scenes/selectCharacter/selectCharacter.gd" id="1_qdgrc"]
[ext_resource type="Texture2D" uid="uid://dik4p3w46kjxt" path="res://resources/images/planet9_Wallpaper_5000x2813.jpg" id="4_fhby6"]

[sub_resource type="LabelSettings" id="LabelSettings_ftrk6"]
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_nqipa"]

[node name="Map2" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdgrc")

[node name="Khung" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PhanDau" type="VBoxContainer" parent="Khung"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
localize_numeral_system = false

[node name="TieuDe" type="HBoxContainer" parent="Khung/PhanDau"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="NutQuayLai" type="Button" parent="Khung/PhanDau/TieuDe"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "< Quay lại"

[node name="NinePatchRect" type="NinePatchRect" parent="Khung/PhanDau/TieuDe"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Khung/PhanDau/TieuDe"]
layout_mode = 2
size_flags_horizontal = 2
text = "Thiết lập đội hình"
label_settings = SubResource("LabelSettings_ftrk6")

[node name="Xuong" type="HBoxContainer" parent="Khung/PhanDau/TieuDe"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="Khung/PhanDau/TieuDe/Xuong"]
layout_mode = 2
patch_margin_left = 50

[node name="Label" type="Label" parent="Khung/PhanDau/TieuDe/Xuong"]
layout_mode = 2
size_flags_horizontal = 8
text = "Xương: 15000"
label_settings = SubResource("LabelSettings_ftrk6")

[node name="NinePatchRect2" type="NinePatchRect" parent="Khung/PhanDau/TieuDe/Xuong"]
layout_mode = 2
patch_margin_left = 30

[node name="PhanGiua" type="VBoxContainer" parent="Khung"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="PhanTren" type="VBoxContainer" parent="Khung/PhanGiua"]
layout_mode = 2
size_flags_vertical = 3

[node name="TieuDe" type="HBoxContainer" parent="Khung/PhanGiua/PhanTren"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Khung/PhanGiua/PhanTren/TieuDe"]
layout_mode = 2
size_flags_horizontal = 2
text = "DIAMON DOG"
label_settings = SubResource("LabelSettings_ftrk6")

[node name="Giua" type="HBoxContainer" parent="Khung/PhanGiua/PhanTren/TieuDe"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 20.0

[node name="Label" type="Label" parent="Khung/PhanGiua/PhanTren/TieuDe/Giua"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_ftrk6")

[node name="Label2" type="Label" parent="Khung/PhanGiua/PhanTren/TieuDe"]
layout_mode = 2
size_flags_horizontal = 2
text = "DIAMON DOG"
label_settings = SubResource("LabelSettings_ftrk6")
lines_skipped = 1

[node name="DoiHinh" type="HBoxContainer" parent="Khung/PhanGiua/PhanTren"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Khung/PhanGiua/PhanTren/DoiHinh"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="Box1" type="Button" parent="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "1"

[node name="TextureRect" type="TextureRect" parent="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer/Box1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fhby6")
expand_mode = 1

[node name="ID" type="Label" parent="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer/Box1"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
text = "0
"
label_settings = SubResource("LabelSettings_nqipa")

[node name="Box2" type="Button" parent="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "4"

[node name="TextureRect" type="TextureRect" parent="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer/Box2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fhby6")
expand_mode = 1

[node name="ID" type="Label" parent="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer/Box2"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
text = "1"
label_settings = SubResource("LabelSettings_nqipa")

[node name="PhanDuoi" type="VBoxContainer" parent="Khung/PhanGiua"]
layout_mode = 2
size_flags_vertical = 3

[node name="TieuDe" type="HBoxContainer" parent="Khung/PhanGiua/PhanDuoi"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Khung/PhanGiua/PhanDuoi/TieuDe"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "    Nhân vật"
label_settings = SubResource("LabelSettings_ftrk6")

[node name="NutLuu" type="Button" parent="Khung/PhanGiua/PhanDuoi/TieuDe"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
theme_override_font_sizes/font_size = 24
text = "Lưu"

[node name="NhanVat" type="HBoxContainer" parent="Khung/PhanGiua/PhanDuoi"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Khung/PhanGiua/PhanDuoi/NhanVat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="Khung/PhanGiua/PhanDuoi/NhanVat/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 50

[node name="PhanCuoi" type="VBoxContainer" parent="Khung"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
localize_numeral_system = false

[node name="TieuDe" type="HBoxContainer" parent="Khung/PhanCuoi"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Khung/PhanCuoi/TieuDe"]
layout_mode = 2
size_flags_horizontal = 2
text = "Căn cứ chó - Hành tinh Doggo"
label_settings = SubResource("LabelSettings_ftrk6")

[node name="ThucAnChoCho" type="HBoxContainer" parent="Khung/PhanCuoi/TieuDe"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="Khung/PhanCuoi/TieuDe/ThucAnChoCho"]
layout_mode = 2
patch_margin_left = 50

[node name="Label" type="Label" parent="Khung/PhanCuoi/TieuDe/ThucAnChoCho"]
layout_mode = 2
size_flags_horizontal = 8
text = "Thức ăn cho chó : 100"
label_settings = SubResource("LabelSettings_ftrk6")

[node name="NinePatchRect2" type="NinePatchRect" parent="Khung/PhanCuoi/TieuDe/ThucAnChoCho"]
layout_mode = 2
patch_margin_left = 30

[connection signal="pressed" from="Khung/PhanDau/TieuDe/NutQuayLai" to="." method="_on_quay_lai_pressed"]
[connection signal="pressed" from="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer/Box1" to="." method="_on_box_pressed"]
[connection signal="pressed" from="Khung/PhanGiua/PhanTren/DoiHinh/ScrollContainer/GridContainer/Box2" to="." method="_on_box_pressed"]
[connection signal="pressed" from="Khung/PhanGiua/PhanDuoi/TieuDe/NutLuu" to="." method="_on_luu_pressed"]
